[APPDEV-2869] QuickShop Redesign - [APPBUG-1622] filter text wrap issue
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@23967 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/quickshop/checkboxlist.css
+++ b/projects/Media/docroot/assets/css/quickshop/checkboxlist.css
@@ -28,7 +28,7 @@
 .checkboxlist label {
 	display:inline-block;
 	vertical-align:baseline;
-	width:130px;
+	width:125px;
 	cursor: pointer;
 	padding: 2px 0 2px 3px;
 	line-height: 15px;
